# carapace

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  ROADMAP.md  TODO.md  docker-compose.yml  prek.toml  pyproject.toml  renovate.json  ruff.toml
.cursor/rules/: python-style.mdc
.github/workflows/: ci.yml  release.yml
bitwarden-cli/: Dockerfile  README.md  entrypoint.sh
bw-serve/: Dockerfile  entrypoint.sh
charts/carapace/: Chart.yaml  README.md  values.yaml
charts/carapace/crds/: sandboxcollections.carapace.dev.yaml  sandboxes.carapace.dev.yaml
charts/carapace/templates/: _helpers.tpl  configmap.yaml  deployment-frontend.yaml  deployment-redis.yaml  deployment-server.yaml  ingress.yaml  networkpolicy.yaml  pvc-bitwarden.yaml  pvc.yaml  rbac.yaml  sandbox-collection.yaml  sandboxes.yaml  service-frontend.yaml  service-redis.yaml  service-server.yaml
docs/: architecture.md  credentials.md  git.md  kubernetes.md  memory.md  quickstart.md  rules.md  sandbox.md  security.md  sessions-and-channels.md  skills.md  websocket-session.md
docs/plans/: channels.md  credentials.md  images.md  kubernetes.md  memory.md  persistent-shell.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/scripts/: prepare-emoji-assets.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: approval-card.tsx  chat-input.tsx  chat-view.tsx  command-result.tsx  connect-form.tsx  credential-approval-card.tsx  denial-note-actions.tsx  domain-access-approval-card.tsx  emoji-text.tsx  git-push-approval-card.tsx  markdown-code-pre.tsx  markdown-content.tsx  message.tsx  new-session-button.tsx  proxy-approval-card.tsx  sidebar.tsx  tool-call-badge.tsx
frontend/src/hooks/: use-swipe-drawer.ts  use-websocket.ts
frontend/src/lib/: api.ts  decoding.ts  emoji.generated.d.ts  emoji.ts  sandbox-read.ts  storage.ts  types.ts  utils.ts
k8s/: deployment-frontend.yaml  deployment-server.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  rbac.yaml  secret.yaml.example  service-frontend.yaml  service-server.yaml
sandbox/: Dockerfile  ccred  setup-proxy.sh
src/carapace/: __main__.py  agent.py  agent_loop.py  auth.py  bootstrap.py  cache.py  cli.py  config.py  credentials.py  git_http.py  git_store.py  llm.py  llm_request_log.py  memory.py  models.py  payloads.py  server.py  session.py  session_engine.py  session_manager.py  skills.py  titler.py  usage.py  ws_models.py
src/carapace/agent/: __init__.py  loop.py  tools.py
src/carapace/assets/: CORE.md  Dockerfile  SECURITY.md  SOUL.md  USER.md  config.yaml  rules.yaml
src/carapace/assets/create-skill/: SKILL.md
src/carapace/assets/credentials/: SKILL.md
src/carapace/assets/example-skill/: SKILL.md  pyproject.toml
src/carapace/assets/example-skill/scripts/: hello.py
src/carapace/assets/skills/create-skill/: REFERENCE.md  SKILL.md
src/carapace/assets/skills/credentials/: SKILL.md
src/carapace/assets/skills/example/: REFERENCE.md  SKILL.md  carapace.yaml  package.json  pyproject.toml  setup.sh
src/carapace/assets/skills/example/scripts/: hello-node.mjs  hello.py
src/carapace/assets/skills/example/src/example_skill/: hello.py
src/carapace/assets/skills/web/: SKILL.md  carapace.yaml  pyproject.toml
src/carapace/assets/skills/web/src/web_skill/: backends.py  fetch.py  search.py
src/carapace/assets/skills/wikipedia/: SKILL.md  carapace.yaml  pyproject.toml
src/carapace/assets/skills/wikipedia/src/wiki_skill/: fetch.py  search.py
src/carapace/channels/: __init__.py  matrix.py
src/carapace/channels/matrix/: __init__.py  approval.py  channel.py  commands.py  formatting.py  subscriber.py
src/carapace/credentials/: __init__.py  bitwarden.py  file.py  protocol.py  registry.py  vaultwarden.py
src/carapace/git/: __init__.py  author.py  http.py  store.py
src/carapace/sandbox/: container_scripts.py  docker.py  exec_flow.py  file_ops.py  kubernetes.py  manager.py  proxy.py  runtime.py  session_lifecycle.py  skill_activation.py  state.py
src/carapace/security/: __init__.py  bouncer.py  classifier.py  context.py  engine.py  exec_allowlist.py  sentinel.py
src/carapace/session/: __init__.py  archive.py  engine.py  manager.py  titler.py  turns.py  types.py
templates/: CHANGELOG.md.j2
tests/: runtime_mocks.py  session_helpers.py  test_agent_helpers.py  test_agent_loop.py  test_agent_read_skill_policy.py  test_auth.py  test_cli.py  test_config.py  test_context_grants.py  test_credentials.py  test_docker.py  test_engine_helpers.py  test_exec_auto_allow.py  test_git.py  test_imports.py  test_kubernetes.py  test_llm_request_log.py  test_matrix.py  test_memory.py  test_models.py  test_proxy.py  test_proxy_gating.py  test_sandbox_file_read_script.py  test_sandbox_str_replace_script.py  test_sentinel.py  test_server.py  test_session.py  test_session_archive.py  test_session_engine_core.py  test_session_engine_lifecycle.py  test_session_engine_models.py  test_session_engine_usage.py  test_session_manager.py  test_skills.py  test_titler.py  test_tool_output_limit.py  test_usage.py
