[project]
name = "carapace"
version = "0.32.1"
description = "Security-first personal AI agent with rule-based information flow control"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.59,<2",
    "typer>=0.23,<1",
    "pyyaml>=6,<7",
    "rich>=14,<15",
    "python-dotenv>=1.2,<2",
    "tenacity>=9,<10",
    "logfire[httpx]>=4,<5",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.40,<1",
    "websockets>=15,<16",
    "pydantic-settings>=2,<3",
    "genai-prices>=0.0.53",
    "docker>=7,<8",
    "loguru>=0.7.3",
    "matrix-nio>=0.25,<1",
    "markdown>=3,<4",
    "kubernetes>=31,<33",
]

[project.scripts]
carapace = "carapace.cli:app"
carapace-server = "carapace.server:main"

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carapace"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_pattern = [
    'charts/carapace/Chart.yaml:^version: (?P<version>.+)$',
    'charts/carapace/Chart.yaml:^appVersion: "(?P<version>.+)"$',
]
commit_parser = "emoji"
build_command = "pip install uv && uv lock && uv build"

[tool.semantic_release.commit_parser_options]
major_tags = ["💥", ":boom:"]
minor_tags = ["✨", ":sparkles:"]
patch_tags = ["🐛", ":bug:", "🚑", ":ambulance:"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
