[project]
name = "example-skill"
version = "0.1.0"
description = "A template skill showing the AgentSkills format with package entrypoints"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28,<1"]

[project.scripts]
hello = "example_skill.hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example_skill"]
