[project]
name = "web-skill"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28,<1", "trafilatura>=2.0,<3"]

[project.scripts]
web_search = "web_skill.search:main"
web_fetch = "web_skill.fetch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_skill"]
