[project]
name = "wiki-skill"
version = "0.1.0"
description = "Wikipedia Search and Fetch Skill"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28,<1"]

[project.scripts]
wiki-search = "wiki_skill.search:main"
wiki-fetch = "wiki_skill.fetch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_skill"]
